--- a/styles/lager.css
+++ b/styles/lager.css
@@ -25,4 +25,9 @@
       grid-column: span 2;
     }
   }
+  @media (min-width: 768px) {
+    #hamburger {
+        display: none;
+    }
+     }
   
