--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -122,5 +122,36 @@ footer {
       margin-left: 2rem;
     }
   }
-  
+  header{
+    background-color: cadetblue;
+    
+    
+}
+.navigation {
+  display: flex;
+  justify-content: center;
+  background-color: #333;
+}
+
+.navigation ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.navigation li {
+  margin: 0;
+}
+
+.navigation a {
+  display: block;
+  padding: 1rem;
+  color: white;
+  text-decoration: none;
+}
+
+.navigation a:hover {
+  background-color: #575757;
+}
+
   
